# hsmecab

./: .gitignore  LICENSE  mecab.cabal
Text/: MeCab.hsc
src/NLP/: MeCab.hs  MeCab.hsc
test/: Spec.hs  Test.hs
