Name:                mecab
Version:             0.1.0
License:             BSD3
License-File:        LICENSE
Author:              Hideyuki Tanaka
Maintainer:          Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
Category:            Natural Language Processing
Synopsis:            A Haskell binding to MeCab
Description:
  A Haskell binding to MeCab <http://mecab.sourceforge.net/>
Homepage:            http://github.com/tanakh/hsmecab
Stability:           Experimental
Tested-with:         GHC==6.10.4
Cabal-Version:       >=1.2
Build-Type:          Simple

library
  build-depends:        base>=4 && <5, utf8-string
  ghc-options:          -O2 -Wall
  hs-source-dirs:       src
  extra-libraries:      mecab

  Exposed-modules:
    NLP.MeCab
