Name:                mecab
Version:             0.3.0
License:             BSD3
License-File:        LICENSE
Author:              Hideyuki Tanaka
Maintainer:          Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
Category:            Natural Language Processing
Synopsis:            A Haskell binding to MeCab
Description:
  A Haskell binding to MeCab <http://mecab.sourceforge.net/>
Homepage:            http://github.com/tanakh/hsmecab
Cabal-Version:       >=1.6
Build-Type:          Simple

library
  build-depends:        base >= 4 && < 5
                      , bytestring >= 0.9 && < 0.10
                      , text >= 0.11 && < 0.12

  ghc-options:          -Wall
  extra-libraries:      mecab

  Exposed-modules:
                        Text.MeCab

Source-repository head
  Type:                 git
  Location:             git@github.com:tanakh/hsmecab.git
