Name:                mecab
Version:             0.4.1
License:             BSD3
License-File:        LICENSE
Author:              Hideyuki Tanaka
Maintainer:          Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
Category:            Natural Language Processing
Synopsis:            A Haskell binding to MeCab
Description:
  A Haskell binding to MeCab <http://mecab.sourceforge.net/>
Homepage:            http://github.com/tanakh/hsmecab
Cabal-Version:       >=1.10
Build-Type:          Simple

library
  build-depends:        base >= 4 && < 5
                      , bytestring >= 0.9 && < 0.12
                      , text >= 0.11 && < 1.4

  ghc-options:          -Wall -O2
  extra-libraries:      mecab

  Exposed-modules:
                        Text.MeCab
  default-language:    Haskell2010

test-suite mecab-test
  type:  exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
                base
              , mecab
              , hspec
              , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

Source-repository head
  Type:                 git
  Location:             git@github.com:tanakh/hsmecab.git
